force-app/main/default/objects/animalos__Animal__c/fields/aos_Behaviour_Observation_Count__c.field-meta.xml
<CustomField>
    <fullName>aos_Behaviour_Observation_Count__c</fullName>
    <label>Behaviour Observation Count</label>
    <summaryFilterItems>
        <field>animalos__Assessment__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Behaviour Observation - Canine, Behaviour Observation - Feline</value>
    </summaryFilterItems>
    <summaryForeignKey>animalos__Assessment__c.animalos__Animal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>