force-app/main/default/objects/animalos__Animal__c/fields/aos_Behaviour_Observation_Created_By__c.field-meta.xml
<CustomField>
    <fullName>aos_Behaviour_Observation_Created_By__c</fullName>
    <formula>aos_Most_Recent_Behaviour_Observation__r.CreatedBy.FirstName &amp; &quot; &quot; &amp; aos_Most_Recent_Behaviour_Observation__r.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Behaviour Observation Created By</label>
    <type>Text</type>
</CustomField>