force-app/main/default/objects/animalos__Animal__c/fields/aos_Behaviour_Observation_Rate__c.field-meta.xml
<CustomField>
    <fullName>aos_Behaviour_Observation_Rate__c</fullName>
    <formula>aos_Behaviour_Observation_Count__c / animalos__Number_of_Days_House__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Behaviour Observation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>