force-app/main/default/objects/animalos__Animal__c/fields/aos_Behaviour_Observation_Status__c.field-meta.xml
<CustomField>
    <fullName>aos_Behaviour_Observation_Status__c</fullName>
    <formula>TEXT(aos_Most_Recent_Behaviour_Observation__r.animalos__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Behaviour Observation Status</label>
    <type>Text</type>
</CustomField>