force-app/main/default/objects/animalos__Animal__c/fields/aos_Behavioural_Score_Applied_At__c.field-meta.xml
<CustomField>
    <fullName>aos_Behavioural_Score_Applied_At__c</fullName>
    <label>Behavioural Score Applied At</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>History/Intake</fullName>
            </value>
            <value>
                <fullName>In Care</fullName>
            </value>
            <value>
                <fullName>Behavioural Evaluation</fullName>
            </value>
            <value>
                <fullName>Vet Exam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>