force-app/main/default/objects/animalos__Animal__c/fields/aos_Behavioural_Score_From_Health_Tab__c.field-meta.xml
<CustomField>
    <fullName>aos_Behavioural_Score_From_Health_Tab__c</fullName>
    <formula>CASE(
aos_Behavioural_Score__c,
&quot;B1&quot;, &quot;B1&quot;,
&quot;B2&quot;, &quot;B2&quot;,
&quot;B3&quot;, &quot;B3&quot;,
&quot;B4&quot;, &quot;B4&quot;,
&quot;B5&quot;, &quot;B5&quot;,
&quot; &quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Behavioural Score</label>
    <type>Text</type>
</CustomField>