force-app/main/default/objects/animalos__Animal__c/fields/aos_Being_alone_initially__c.field-meta.xml
<CustomField>
    <fullName>aos_Being_alone_initially__c</fullName>
    <label>Being alone (initially)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Adoption_Information</valueSetName>
    </valueSet>
</CustomField>