force-app/main/default/objects/animalos__Animal__c/fields/aos_Being_alone_once_settled_in__c.field-meta.xml
<CustomField>
    <fullName>aos_Being_alone_once_settled_in__c</fullName>
    <label>Being alone (once settled in)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Adoption_Information</valueSetName>
    </valueSet>
</CustomField>