force-app/main/default/objects/animalos__Animal__c/fields/aos_Block_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>aos_Block_Name_Text__c</fullName>
    <formula>animalos__Current_Block__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Block Name</label>
    <type>Text</type>
</CustomField>