force-app/main/default/objects/animalos__Animal__c/fields/aos_Body_Condition_Score__c.field-meta.xml
<CustomField>
    <fullName>aos_Body_Condition_Score__c</fullName>
    <label>Body Condition Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>