force-app/main/default/objects/animalos__Animal__c/fields/aos_Calculated_Age_at_Deceased_Date__c.field-meta.xml
<CustomField>
    <fullName>aos_Calculated_Age_at_Deceased_Date__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <formula>IF(
    NOT(ISBLANK(animalos__Deceased_Date__c)) &amp;&amp; NOT(ISBLANK(animalos__Date_of_Birth__c)),
    FLOOR((DATEVALUE(animalos__Deceased_Date__c) - animalos__Date_of_Birth__c)),
    NULL
) / 365</formula>
    <label>Calculated Age at Deceased Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>