force-app/main/default/objects/animalos__Animal__c/fields/aos_Calculated_Time_Known__c.field-meta.xml
<CustomField>
    <fullName>aos_Calculated_Time_Known__c</fullName>
    <formula>IF( ISNULL(aos_Migrated_Created_Date__c),
TEXT(FLOOR((TODAY() - DATEVALUE(CreatedDate ))/365)) &amp;&apos; YEARS&apos; &amp; &apos; &apos; &amp;
TEXT(FLOOR(MOD((TODAY() - DATEVALUE(CreatedDate)),365)/30)) &amp;&apos; MONTHS&apos; &amp; &apos; &apos; &amp;
TEXT(MOD(MOD((TODAY() - DATEVALUE(CreatedDate)),365),30)) &amp;&apos; DAYS&apos;,

TEXT(FLOOR((TODAY() - DATEVALUE(aos_Migrated_Created_Date__c))/365)) &amp;&apos; YEARS&apos; &amp; &apos; &apos; &amp;
TEXT(FLOOR(MOD((TODAY() - DATEVALUE(aos_Migrated_Created_Date__c)),365)/30)) &amp;&apos; MONTHS&apos; &amp; &apos; &apos; &amp;
TEXT(MOD(MOD((TODAY() - DATEVALUE(aos_Migrated_Created_Date__c)),365),30)) &amp;&apos; DAYS&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Time Known</label>
    <type>Text</type>
</CustomField>