force-app/main/default/objects/animalos__Animal__c/fields/aos_Cat_Adoption_Recommendation_Summary__c.field-meta.xml
<CustomField>
    <fullName>aos_Cat_Adoption_Recommendation_Summary__c</fullName>
    <label>Cat Adoption Recommendation Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>