force-app/main/default/objects/animalos__Animal__c/fields/aos_Cat_Home_Requirements__c.field-meta.xml
<CustomField>
    <fullName>aos_Cat_Home_Requirements__c</fullName>
    <label>Cat Home Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Peaceful and quiet home environment</fullName>
            </value>
            <value>
                <fullName>Must have secure outdoor acces</fullName>
            </value>
            <value>
                <fullName>Not suited for apartment living</fullName>
            </value>
            <value>
                <fullName>Must have secure outdoor access</fullName>
                <isActive>false</isActive>
                <label>Must have secure outdoor access</label>
            </value>
            <value>
                <fullName>No apartments</fullName>
                <isActive>false</isActive>
                <label>No apartments</label>
            </value>
            <value>
                <fullName>Quiet calm household</fullName>
                <isActive>false</isActive>
                <label>Quiet calm household</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>