force-app/main/default/objects/animalos__Animal__c/fields/aos_Cat_Sociability__c.field-meta.xml
<CustomField>
    <fullName>aos_Cat_Sociability__c</fullName>
    <label>Cat Sociability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High (Green on daily behaviour observations)</fullName>
            </value>
            <value>
                <fullName>Medium (Yellow on daily observations)</fullName>
            </value>
            <value>
                <fullName>Low (Yellow and some beige on daily behaviour observations)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>