force-app/main/default/objects/animalos__Animal__c/fields/aos_Cause_of_Death_suspected_or__c.field-meta.xml
<CustomField>
    <fullName>aos_Cause_of_Death_suspected_or__c</fullName>
    <inlineHelpText>Suspected or veterinary diagnosed</inlineHelpText>
    <label>Cause of Death</label>
    <length>255</length>
    <type>Text</type>
</CustomField>