force-app/main/default/objects/animalos__Animal__c/fields/aos_Child_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>aos_Child_Recommendation__c</fullName>
    <label>Child Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No children under 12</fullName>
            </value>
            <value>
                <fullName>Children under 12 with parental guidance</fullName>
            </value>
            <value>
                <fullName>Teenage +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>