force-app/main/default/objects/animalos__Animal__c/fields/aos_Coat_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Coat_Type__c</fullName>
    <label>Coat Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Curly</fullName>
            </value>
            <value>
                <fullName>Hairless</fullName>
            </value>
            <value>
                <fullName>Long</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Short</fullName>
            </value>
            <value>
                <fullName>Smooth</fullName>
            </value>
            <value>
                <fullName>Thick</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>