force-app/main/default/objects/animalos__Animal__c/fields/aos_Confirmed_How__c.field-meta.xml
<CustomField>
    <fullName>aos_Confirmed_How__c</fullName>
    <label>Confirmed How</label>
    <type>TextArea</type>
</CustomField>