force-app/main/default/objects/animalos__Animal__c/fields/aos_Council_ID__c.field-meta.xml
<CustomField>
    <fullName>aos_Council_ID__c</fullName>
    <label>Council ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>