force-app/main/default/objects/animalos__Animal__c/fields/aos_Crossbreed__c.field-meta.xml
<CustomField>
    <fullName>aos_Crossbreed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crossbreed</label>
    <type>Checkbox</type>
</CustomField>