force-app/main/default/objects/animalos__Animal__c/fields/aos_Current_Days_Site__c.field-meta.xml
<CustomField>
    <fullName>aos_Current_Days_Site__c</fullName>
    <description>Total number of days the Animal has been in our shelter since it&apos;s last  incoming Referral</description>
    <formula>animalos__Days_at_Site__c - (animalos__Current_Days_Foster__c + animalos__Current_Days_Offsite__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total number of days the Animal has been in our shelter since it&apos;s last  incoming Referral</inlineHelpText>
    <label>Current Days (SIte)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>