force-app/main/default/objects/animalos__Animal__c/fields/aos_Current_Unit_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Current_Unit_Record_Type__c</fullName>
    <formula>animalos__Current_Unit__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Unit Record Type</label>
    <type>Text</type>
</CustomField>