force-app/main/default/objects/animalos__Animal__c/fields/aos_Date_Due_Out__c.field-meta.xml
<CustomField>
    <fullName>aos_Date_Due_Out__c</fullName>
    <label>Date Due Out</label>
    <type>Date</type>
</CustomField>