force-app/main/default/objects/animalos__Animal__c/fields/aos_Declared_Ready_For_Release__c.field-meta.xml
<CustomField>
    <fullName>aos_Declared_Ready_For_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Declared Ready For Release</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Declared_Animals_Ready_For_Release</relationshipName>
    <type>Lookup</type>
</CustomField>