force-app/main/default/objects/animalos__Animal__c/fields/aos_Declared_Ready_For_Release_Text__c.field-meta.xml
<CustomField>
    <fullName>aos_Declared_Ready_For_Release_Text__c</fullName>
    <label>Declared Ready For Release Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>