force-app/main/default/objects/animalos__Animal__c/fields/aos_Desex_Source__c.field-meta.xml
<CustomField>
    <fullName>aos_Desex_Source__c</fullName>
    <label>Desex Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Already Desexed</fullName>
            </value>
            <value>
                <fullName>Desexed in RSPCA Care</fullName>
            </value>
            <value>
                <fullName>RSPCA Outreach Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>