force-app/main/default/objects/animalos__Animal__c/fields/aos_Distinguishing_Features__c.field-meta.xml
<CustomField>
    <fullName>aos_Distinguishing_Features__c</fullName>
    <label>Distinguishing Features</label>
    <length>255</length>
    <type>Text</type>
</CustomField>