force-app/main/default/objects/animalos__Animal__c/fields/aos_Do_Not_Euthanise__c.field-meta.xml
<CustomField>
    <fullName>aos_Do_Not_Euthanise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Euthanise</label>
    <type>Checkbox</type>
</CustomField>