force-app/main/default/objects/animalos__Animal__c/fields/aos_Dog_Sociability__c.field-meta.xml
<CustomField>
    <fullName>aos_Dog_Sociability__c</fullName>
    <label>Dog Sociability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appears dog social</fullName>
            </value>
            <value>
                <fullName>Can be selective (e.g. no off leash dogs parks)</fullName>
            </value>
            <value>
                <fullName>Single dog household</fullName>
            </value>
            <value>
                <fullName>Must be only dog</fullName>
                <isActive>false</isActive>
                <label>Must be only dog</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>