force-app/main/default/objects/animalos__Animal__c/fields/aos_Ear_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Ear_Type__c</fullName>
    <label>Ear Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricked</fullName>
            </value>
            <value>
                <fullName>Folded</fullName>
            </value>
            <value>
                <fullName>Drooping</fullName>
            </value>
            <value>
                <fullName>Rose</fullName>
            </value>
            <value>
                <fullName>Mismatched</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>