force-app/main/default/objects/animalos__Animal__c/fields/aos_Endangered_Status__c.field-meta.xml
<CustomField>
    <fullName>aos_Endangered_Status__c</fullName>
    <formula>TEXT(animalos__Primary_Breed__r.animalos__Endangered_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endangered Status</label>
    <type>Text</type>
</CustomField>