force-app/main/default/objects/animalos__Animal__c/fields/aos_Estimated_Age_Weeks__c.field-meta.xml
<CustomField>
    <fullName>aos_Estimated_Age_Weeks__c</fullName>
    <label>Estimated Age (Weeks)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>