force-app/main/default/objects/animalos__Animal__c/fields/aos_External_User_ID__c.field-meta.xml
<CustomField>
    <fullName>aos_External_User_ID__c</fullName>
    <externalId>true</externalId>
    <label>External User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>