force-app/main/default/objects/animalos__Animal__c/fields/aos_Eye_Colour__c.field-meta.xml
<CustomField>
    <fullName>aos_Eye_Colour__c</fullName>
    <label>Eye Colour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>