force-app/main/default/objects/animalos__Animal__c/fields/aos_Fencing_Requirements__c.field-meta.xml
<CustomField>
    <fullName>aos_Fencing_Requirements__c</fullName>
    <inlineHelpText>What kind of fencing is needed for this dog?</inlineHelpText>
    <label>Fencing Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No special requirements</fullName>
            </value>
            <value>
                <fullName>Solid fencing (e.g. nothing to climb or height restriction)</fullName>
            </value>
            <value>
                <fullName>Secure footings (history of digging)</fullName>
            </value>
            <value>
                <fullName>6ft colorbond with footings (manageable escape history)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>