force-app/main/default/objects/animalos__Animal__c/fields/aos_Final_Lost_Report_Check__c.field-meta.xml
<CustomField>
    <fullName>aos_Final_Lost_Report_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Lost Report Check</label>
    <type>Checkbox</type>
</CustomField>