force-app/main/default/objects/animalos__Animal__c/fields/aos_First_Microchip_Scanned_By__c.field-meta.xml
<CustomField>
    <fullName>aos_First_Microchip_Scanned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1st Microchip Scanned By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>aos_First_Microchip_Scanner</relationshipName>
    <type>Lookup</type>
</CustomField>