force-app/main/default/objects/animalos__Animal__c/fields/aos_FIV_Date_Administered__c.field-meta.xml
<CustomField>
    <fullName>aos_FIV_Date_Administered__c</fullName>
    <label>FIV Test Date</label>
    <type>Date</type>
</CustomField>