force-app/main/default/objects/animalos__Animal__c/fields/aos_FIV_FeLV_Test_Outcome__c.field-meta.xml
<CustomField>
    <fullName>aos_FIV_FeLV_Test_Outcome__c</fullName>
    <label>FIV/FeLV Test Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive/Positive</fullName>
            </value>
            <value>
                <fullName>Positive/Negative</fullName>
            </value>
            <value>
                <fullName>Negative/Positive</fullName>
            </value>
            <value>
                <fullName>Negative/Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>