force-app/main/default/objects/animalos__Animal__c/fields/aos_Further_Comments__c.field-meta.xml
<CustomField>
    <fullName>aos_Further_Comments__c</fullName>
    <label>Further Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>