force-app/main/default/objects/animalos__Animal__c/fields/aos_Gallery_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>aos_Gallery_Updated_Date__c</fullName>
    <label>Gallery Updated Date</label>
    <type>Date</type>
</CustomField>