force-app/main/default/objects/animalos__Animal__c/fields/aos_General_interactions_with_dogs__c.field-meta.xml
<CustomField>
    <fullName>aos_General_interactions_with_dogs__c</fullName>
    <label>General interactions with dogs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Adoption_Information</valueSetName>
    </valueSet>
</CustomField>