force-app/main/default/objects/animalos__Animal__c/fields/aos_General_Requirements__c.field-meta.xml
<CustomField>
    <fullName>aos_General_Requirements__c</fullName>
    <label>General Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Has breed knowledge/experience</fullName>
                <label>Breed savvy home</label>
            </value>
            <value>
                <fullName>Must go home with another dog</fullName>
                <label>Canine companion needed</label>
            </value>
            <value>
                <fullName>Has owned a cat before</fullName>
                <label>Familiar with cat behaviour and needs</label>
            </value>
            <value>
                <fullName>Must be only pet</fullName>
            </value>
            <value>
                <fullName>No dogs</fullName>
                <label>Not suitable for a home with dogs</label>
            </value>
            <value>
                <fullName>No pocket pets or birds</fullName>
                <label>Not suitable for a home with pocket pets or birds</label>
            </value>
            <value>
                <fullName>Quiet/Calm Household</fullName>
                <label>Peaceful or quiet home environment</label>
            </value>
            <value>
                <fullName>Must go home as bonded pair</fullName>
                <label>Rehomed with bonded companion</label>
            </value>
            <value>
                <fullName>STV - see relevant waiver</fullName>
                <label>Veterinary consult prior to adoption</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>