force-app/main/default/objects/animalos__Animal__c/fields/aos_Had_the_animal_showed_signs_of__c.field-meta.xml
<CustomField>
    <fullName>aos_Had_the_animal_showed_signs_of__c</fullName>
    <inlineHelpText>Had the animal showed signs of illness in the week leading up to death?</inlineHelpText>
    <label>Had the Animal Showed Signs of illness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>