force-app/main/default/objects/animalos__Animal__c/fields/aos_Had_Veterinary_Attention_Been_sought__c.field-meta.xml
<CustomField>
    <fullName>aos_Had_Veterinary_Attention_Been_sought__c</fullName>
    <label>Had Veterinary Attention Been sought</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>