force-app/main/default/objects/animalos__Animal__c/fields/aos_Handling_with_known_people__c.field-meta.xml
<CustomField>
    <fullName>aos_Handling_with_known_people__c</fullName>
    <label>Handling with known people</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Adoption_Information</valueSetName>
    </valueSet>
</CustomField>