force-app/main/default/objects/animalos__Animal__c/fields/aos_Heartworm_Test__c.field-meta.xml
<CustomField>
    <fullName>aos_Heartworm_Test__c</fullName>
    <label>Heartworm Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>