force-app/main/default/objects/animalos__Animal__c/fields/aos_Heartworm_Test_Outcome__c.field-meta.xml
<CustomField>
    <fullName>aos_Heartworm_Test_Outcome__c</fullName>
    <label>Heartworm Test Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>