force-app/main/default/objects/animalos__Animal__c/fields/aos_Home_Requirements__c.field-meta.xml
<CustomField>
    <fullName>aos_Home_Requirements__c</fullName>
    <inlineHelpText>How much company would be best for this dog?</inlineHelpText>
    <label>Home Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Someone home most/all of the time</fullName>
            </value>
            <value>
                <fullName>Someone working average work hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>