force-app/main/default/objects/animalos__Animal__c/fields/aos_House_Training__c.field-meta.xml
<CustomField>
    <fullName>aos_House_Training__c</fullName>
    <label>House Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Of concern</fullName>
            </value>
            <value>
                <fullName>Manageable</fullName>
            </value>
            <value>
                <fullName>Low Concern</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>