force-app/main/default/objects/animalos__Animal__c/fields/aos_Household_Activity_Level__c.field-meta.xml
<CustomField>
    <fullName>aos_Household_Activity_Level__c</fullName>
    <label>Household Activity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>