force-app/main/default/objects/animalos__Animal__c/fields/aos_Impound_Record_Number__c.field-meta.xml
<CustomField>
    <fullName>aos_Impound_Record_Number__c</fullName>
    <label>Impound Record Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>